--- a/class-work/fashion-blog-solution/css/main.css
+++ b/class-work/fashion-blog-solution/css/main.css
@@ -1,32 +1,13 @@
-aside {
-	float: right;
-	height: 50px;
-  	width: 250px;
-}
-
 body {
 	margin: 0;
 	padding: 0;
-	font-family: "Lato, Helvetica, sans-serif;
+	font-family: "Lato", Helvetica, sans-serif;
 	font-size: 18px;
 	line-height: 1.5;
-	color: #444;
+	color: #444444;
 }
-
-.container {
-	margin: auto;
-	padding: 54
-	width: 1080px;
-}
-
 
 h1, h2, h3, h4 {
-	margin: 0;
-}
-
-header h1,
-header h2 {
-	display: inline-block;
 	margin: 0;
 }
 
@@ -39,9 +20,8 @@ h1 {
 }
 
 h2 {
-	color: #000000;
-	display: inline-block;
 	font-size: 36px;
+	color: #000000;
 }
 
 h2 a {
@@ -50,7 +30,6 @@ h2 a {
 
 h2 a:hover {
 	color: #dd0000;
-	margin-top: 7px;
 }
 
 h3 {
@@ -68,24 +47,22 @@ img {
 }
 
 a {
-	color: #ddo;
+	color: #dd0000;
 	text-decoration: none;
 }
 
 a:hover {
-	color: #a00;
+	color: #aa0000;
 }
 
 .container {
 	padding: 54px;
-	width: 1080px;
+	width: 720px;
 	border-left: 6px solid #dddddd;
 }
 
 .header h2 {
-	color: #888;
 	font-size: 27px;
-	font-weight: 27px;
 	margin-bottom: 9px;
 }
 
@@ -100,30 +77,9 @@ a:hover {
 	border-bottom: 2px solid #eeeeee;
 }
 
-nav {
-	background: black;
-}
-
-nav a { 
-	background: #000;
-	color: #fff;
-	font-size: 24px;
-	display: inline-black;
-	padding: 50px; 
-}
-
 header .nav a:hover {
-	background: #900;
 	color: #000000;
 	border-bottom: 2px solid #bbbbbb;
-}
-
-title
-
-{
-	color: #dd0
-    font-size: 54px
-    font-weight: 300
 }
 
 .article {
@@ -131,20 +87,3 @@ title
 	margin: 54px 0;
 	padding-bottom: 27px;
 }
-
-section {
-	float: left;
-	height: 50px;
-  	width: 700px;
-}
-
-.clear {
-    clear: both;
-}
-
-.clearfix:after {
-	  content:"Sarte's List";
-	  display:table;
-	  clear:both;
-	}
-
