--- a/homework/class07/startup-matchmaker/css/styles.css
+++ b/homework/class07/startup-matchmaker/css/styles.css
@@ -8,13 +8,17 @@ font-family: 'Source Sans Pro', sans-serif;
 */
 
 aside	{
-
+	background: rgba(222,222,222,.6);
 	float: right;
+	width: 40%;
+	padding: 20px;
 
 }
 
 .banner {
-	background: url(../img/coworking);
+	background: url(../img/coworking.jpg);
+	overflow: auto;
+	padding: 20px;	
 }
 
 body	{
@@ -26,7 +30,41 @@ body	{
 	}
 
 
-body, h1, h2, h3 
+/* .card	{
+	  font-family: "Merriweather"
+	  padding: 5px;	
+	  width: 20%;
+
+} */
+
+.button {
+  background: #C6C6C6;
+  border-radius: 5px;
+  box-sizing: border-box;
+  box-shadow: inset 0 -3px 0 rgba(0,0,0,.2);
+  display: block;
+  float: left;
+  font-family: "Oswald";
+  font-size: 20px;
+  font-weight: bold;
+  letter-spacing: 1px;
+  padding: 12px;
+  text-transform: uppercase;
+  width: 100%;
+}
+
+.card2{
+	  box-sizing: border-box;
+	  display: inline-block;
+	  float: left;
+	  font-family: "Merriweather";
+	  overflow: auto;
+	  padding: 40px;
+	  width: 20%;
+	  border: solid black 1px;
+
+}
+body, h1, h2, h3, p 
 {
 	margin: 0;
 }
@@ -34,7 +72,8 @@ body, h1, h2, h3
 h1	{
 	color: #ffff00;
 	float: left;
-  	font-family: "Merriweather"; 	
+  	font-family: "Merriweather"; 
+  	padding: 5px;	
 }
 
 header {
@@ -46,11 +85,18 @@ header {
 nav	{
 	float: right;
   	font-family: "Oswald"; 
+  	padding: 10px;
 	}
 
-
 nav a {
-
 	color: #fff;
+	padding: 3px; 
+}
+
+.tagline {
+	font-family: "Merriweather";
+	font-style: italic;
+  	background: #C6C6C6;
+  	text-align: center;
 }
 
