--- a/homework/class07/startup-matchmaker/css/styles.css
+++ b/homework/class07/startup-matchmaker/css/styles.css
@@ -49,6 +49,7 @@ body	{
   font-weight: bold;
   letter-spacing: 1px;
   padding: 12px;
+  text-align: center;
   text-transform: uppercase;
   width: 100%;
 }
