--- a/homework/class07/startup-matchmaker/css/styles.css
+++ b/homework/class07/startup-matchmaker/css/styles.css
@@ -61,14 +61,30 @@ body	{
 	  font-family: "Merriweather";
 	  overflow: auto;
 	  padding: 40px;
-	  width: 33%;
-	  border: solid black 1px;
-
+	  width: 33.3%;
 }
+
 body, h1, h2, h3, p 
 {
 	margin: 0;
 }
+
+.fas {
+
+	color: red;
+}
+
+
+footer {
+	width: 100%;
+	height: 10%;
+	position: absolute;
+	bottom: 0%;
+	padding: 1%;
+	background-color: #000;
+	color: white;
+}
+	
 
 h1	{
 	color: #ffff00;
