--- a/homework/class07/startup-matchmaker/css/styles.css
+++ b/homework/class07/startup-matchmaker/css/styles.css
@@ -77,8 +77,8 @@ body, h1, h2, h3, p
 
 footer {
 	width: 100%;
-	height: 10%;
-	position: absolute;
+	height: 3%;
+	position: fixed;
 	bottom: 0%;
 	padding: 1%;
 	background-color: #000;
