--- a/homework/Final Project/styles.css
+++ b/homework/Final Project/styles.css
@@ -1,10 +1,10 @@
 .banner {
-	background: url (../img/westvillage2.jpg);
-	overflow: auto;
-	padding: 20px;	
+	overflow: hidden;
+	padding: 3%;	
+	box-shadow: inset 0 0 5px rgba(0,0,0,.75);
 }
 
-body, p {
+p {
     display: flex;
     flex-direction: column;
     font-family: 'Asap', sans-serif;
@@ -13,6 +13,14 @@ body, p {
     color: #333;
     background-color: #fff;
 }
+
+body	{
+
+	background: url(img/westvillage2.jpg);
+	background-size: cover;
+
+}
+
 
 button {
   background: #C6C6C6;
@@ -39,6 +47,7 @@ button {
 }
 
 h1	{	
+	box-sizing: border-box;
 	display: flex;
 	flex-direction: column;
 	padding-top: 30px;
@@ -48,6 +57,15 @@ h1	{
     background-color: #eee;
 }
 
+.fas {
+
+	color: red;
+}
+
+img {
+    opacity: 0.5;
+    filter: alpha(opacity=50); 
+}
 
 @media screen and (max-width: 768px) {
 
