--- a/class-work/class15/click-count/css/style.css
+++ b/class-work/class15/click-count/css/style.css
@@ -22,3 +22,16 @@ body {
 	font-family: "Short Stack", fantasy;
 	cursor: pointer;
 }
+
+body.rotate {
+    animation: rotation 2s infinite linear;
+}
+
+@keyframes rotation {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(359deg);
+    }
+}
