--- a/homework/Final Project/emoji-picker-master/lib/css/emoji.css
+++ b/homework/Final Project/emoji-picker-master/lib/css/emoji.css
@@ -250,13 +250,17 @@ img.emoji {
     display: none;
 }
 
-.body-to-show {
-    opacity: 1;
-    transition: opacity .25s ease;
+.banner {
+    background: url('../../images/westvillage2.jpg');
+    background-size: cover;
+    overflow: hidden;
+    padding: 10%;
+    box-shadow: inset 0 0 5px rgba(0,0,0,.75);
+    margin-bottom: 25px;
 }
 
+
 .jumbotron {
-    background: url('../images/westvillage2.jpg');
     font-size: 25px;
     color: #161616;
     margin: 0;
@@ -264,5 +268,15 @@ img.emoji {
     margin-bottom: 25px;
 }
 
+footer {
+    background: black;
+    color: white;
+    padding: 2% 3%;
+}
 
+#map {
+        height: 10%;
+      }
+      
+    
 
